# AdvancedOS

./: CMakeLists.txt  LICENSE  README.md  让我帮你一步步完成项目的构建和运行。.md
include/: advanced_kernel.h  cli.h  disk_manager.h  filesystem.h  interrupt.h  io.h  ipc.h  kernel.h  keyboard.h  logger.h  mainwindow.h  memory.h  network.h  pip.h  process.h  screen.h  types.h  user_auth.h  utils.h
src/: advanced_kernel.cpp  cli.cpp  disk_manager.cpp  filesystem.cpp  interrupt.cpp  ipc.cpp  kernel.cpp  kernel_main.cpp  keyboard.cpp  logger.cpp  main.cpp  mainwindow.cpp  memory.cpp  network.cpp  pipe.cpp  process.cpp  screen.cpp  user_auth.cpp  utils.cpp
